--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>My first Repo</title>
 </head>
 <body>
-    <h1>hello world!</h1>
+    <h1>Hello world!</h1>
     <h3>This is my first repo</h3>
+    <p>this is first time i pushed my code on github</p>
 </body>
 </html>
